Fixed Header's z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,7 @@ html, body {
 	position: fixed;
 	top: 0;
 	left: 90px;
+	z-index: 10;
 }
 
 .nav a {
